# automation-test-python-behave

./: .gitignore  README.md  behave.ini  bitbucket-pipelines.yml  config.yml  helpers.py  pyproject.toml  requirements.txt  run.sh
core_common/: elementaction.py
features/: environment.py  login.feature
modules/login/features/: environment.py
modules/login_test/features/: environment.py
modules/login_test/features/steps/: login_steps.py
modules/object_properties/features/: environment.py
modules/tag_explore/topology_view/features/: topology_view.feature
steps/: login_steps.py
