[tool.poetry]
name = "foresight-behave"
version = "0.1.0"
description = ""
authors = ["Tim Jagenberg <tim.jagenberg@piscada.com>"]
readme = "README.md"
packages = [{include = "foresight_behave"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.277"
behave = "^1.2.6"
selenium = "^4.10.0"
pytest = "^7.4.0"
junit2influx = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 168
